--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Header -->
   <header>
     <h1>Welcome to My First Website</h1>
     <nav>
@@ -19,7 +18,6 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-text">
       <h2>Enjoy Your Stay</h2>
@@ -39,7 +37,11 @@
   <!-- Contact Us Section -->
   <section class="contact-section" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/mqabkknj" method="POST" class="contact-form">
+    <form action="https://formsubmit.co/youremail@example.com" method="POST" class="contact-form">
+      <!-- Replace with your real email above -->
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://TobyBankz.github.io/thankyou.html">
+
       <label for="name">Your Name:</label>
       <input type="text" id="name" name="name" required>
 
@@ -49,14 +51,10 @@
       <label for="message">Message:</label>
       <textarea id="message" name="message" rows="5" required></textarea>
 
-      <!-- ✅ Redirect to thankyou.html after submission -->
-      <input type="hidden" name="_next" value="thankyou.html">
-
       <button type="submit" class="btn">Send Message</button>
     </form>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 My First Website. All rights reserved.</p>
   </footer>
