--- a/thankyou.html
+++ b/thankyou.html
@@ -5,12 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thank You</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .thankyou-section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/beach-bg.jpeg') no-repeat center center/cover;
+      color: #fff;
+      text-align: center;
+      padding: 2rem;
+    }
+    .thankyou-section h1 {
+      font-size: 2.5rem;
+    }
+    .thankyou-section a {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.8rem 1.5rem;
+      background-color: #ffffff;
+      color: #333;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
-  <section class="thank-you-section">
-    <h1>Thank You!</h1>
-    <p>Your message has been successfully sent. We'll get back to you soon.</p>
-    <a href="index.html" class="btn">Return to Home</a>
+  <section class="thankyou-section">
+    <div>
+      <h1>Thank You for Your Message!</h1>
+      <p>We'll get back to you as soon as possible.</p>
+      <a href="index.html">Return to Home</a>
+    </div>
   </section>
 </body>
 </html>
