Updated index with working FormSubmit contact form

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Contact Us Section -->
   <section class="contact-section" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formsubmit.co/pulajohn@onmail.com" method="POST" class="contact-form">
+    <form action="https://formsubmit.co/duelaine811@gmail.com" method="POST" class="contact-form">
       <!-- Redirect to thank you page -->
       <input type="hidden" name="_next" value="https://tobybankz.github.io/first-website/thankyou.html">
       <!-- Disable Captcha -->
