--- a/index.html
+++ b/index.html
@@ -38,23 +38,16 @@
   <!-- Contact Us Section -->
   <section class="contact-section" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formsubmit.co/duelaine811@gmail.com" method="POST" class="contact-form">
-      <!-- Redirect to thank you page -->
-      <input type="hidden" name="_next" value="https://tobybankz.github.io/first-website/thankyou.html">
-      <!-- Disable Captcha -->
-      <input type="hidden" name="_captcha" value="false">
+    <form action="https://getform.io/f/aejlloob" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <textarea name="message" placeholder="Your Message" required></textarea>
 
-      <label for="name">Your Name:</label>
-      <input type="text" id="name" name="name" required>
+  <!-- Optional: redirect after submission -->
+  <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html">
 
-      <label for="email">Your Email:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
-      <button type="submit" class="btn">Send Message</button>
-    </form>
+  <button type="submit">Send</button>
+</form>
   </section>
 
   <footer>
