--- a/booking.html
+++ b/booking.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Booking - My First Website</title>
+  <title>Booking - Ziba Beach Resort</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Booking</h1>
+    <h1>Ziba Beach Resort</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="booking.html">Booking</a></li>
+        <li><a href="booking.html" class="active">Booking</a></li>
       </ul>
     </nav>
   </header>
@@ -21,33 +21,28 @@
   <section class="booking-section">
     <h2>Book Your Stay</h2>
     <form action="https://getform.io/f/aejlloob" method="POST" class="booking-form">
-      <!-- Hidden field to identify the form type -->
-      <input type="hidden" name="form_type" value="booking">
+      <input type="text" name="name" placeholder="Your Full Name" required>
+      <input type="email" name="email" placeholder="Your Email Address" required>
+      <input type="tel" name="phone" placeholder="Phone Number" required>
+      <input type="date" name="checkin" required>
+      <input type="date" name="checkout" required>
+      <select name="room_type" required>
+        <option value="">Select Room Type</option>
+        <option value="Standard Room">Standard Room</option>
+        <option value="Deluxe Room">Deluxe Room</option>
+        <option value="Ocean View Suite">Ocean View Suite</option>
+      </select>
+      <textarea name="message" placeholder="Additional Requests"></textarea>
 
-      <!-- Redirect after submission -->
+      <!-- Redirect after submit -->
       <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html">
 
-      <label for="name">Your Name:</label>
-      <input type="text" id="name" name="name" placeholder="Your Name" required>
-
-      <label for="email">Your Email:</label>
-      <input type="email" id="email" name="email" placeholder="Your Email" required>
-
-      <label for="checkin">Check-in Date:</label>
-      <input type="date" id="checkin" name="checkin" required>
-
-      <label for="checkout">Check-out Date:</label>
-      <input type="date" id="checkout" name="checkout" required>
-
-      <label for="special_request">Special Requests:</label>
-      <textarea id="special_request" name="special_request" placeholder="Optional message..."></textarea>
-
-      <button type="submit" class="btn">Book Now</button>
+      <button type="submit" class="btn">Submit Booking</button>
     </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 My First Website. All rights reserved.</p>
+    <p>&copy; 2025 Ziba Beach Resort. All rights reserved.</p>
   </footer>
 </body>
 </html>
