--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My First Website</title>
+  <title>Ziba Beach Resort</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to My First Website</h1>
+    <h1>Ziba Beach Resort</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -38,20 +38,19 @@
   <!-- Contact Us Section -->
   <section class="contact-section" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://getform.io/f/aejlloob" method="POST">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <textarea name="message" placeholder="Your Message" required></textarea>
+    <form action="https://getform.io/f/aejlloob" method="POST" class="styled-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
 
-  <!-- Optional: redirect after submission -->
-  <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html">
+      <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html">
 
-  <button type="submit">Send</button>
-</form>
+      <button type="submit" class="btn">Send</button>
+    </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 My First Website. All rights reserved.</p>
+    <p>&copy; 2025 Ziba Beach Resort. All rights reserved.</p>
   </footer>
 </body>
 </html>
