--- a/thankyou.html
+++ b/thankyou.html
@@ -3,40 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You</title>
+  <title>Thank You | Ziba Beach Resort</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .thankyou-section {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/beach-bg.jpeg') no-repeat center center/cover;
-      color: #fff;
-      text-align: center;
-      padding: 2rem;
-    }
-    .thankyou-section h1 {
-      font-size: 2.5rem;
-    }
-    .thankyou-section a {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.8rem 1.5rem;
-      background-color: #ffffff;
-      color: #333;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-  </style>
 </head>
 <body>
-  <section class="thankyou-section">
-    <div>
-      <h1>Thank You for Your Message!</h1>
-      <p>We'll get back to you as soon as possible.</p>
-      <a href="index.html">Return to Home</a>
+  <header>
+    <h1>Ziba Beach Resort</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="booking.html">Booking</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Thank You Section -->
+  <section class="thankyou-section" style="background-image: url('images/beach-bg.jpeg'); background-size: cover; background-position: center; text-align: center; padding: 100px 20px;">
+    <div class="thankyou-message" style="background-color: rgba(0,0,0,0.6); padding: 40px; border-radius: 10px; display: inline-block;">
+      <h2 style="color: #fff;">Thank You!</h2>
+      <p style="color: #fff;">Your booking/message has been successfully submitted. We’ll get back to you shortly.</p>
+      <a href="index.html" class="btn" style="margin-top: 20px; display: inline-block; background: #fff; padding: 10px 20px; text-decoration: none; color: #000; border-radius: 5px;">Back to Home</a>
     </div>
   </section>
+
+  <footer>
+    <p>&copy; 2025 Ziba Beach Resort. All rights reserved.</p>
+  </footer>
 </body>
 </html>
