Fix contact section layout and style

--- a/index.html
+++ b/index.html
@@ -37,17 +37,15 @@
 
   <!-- Contact Us Section -->
   <section class="contact-section" id="contact">
-    <h2>Contact Us</h2>
-    <form action="https://getform.io/f/aejlloob" method="POST" class="styled-form">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" required></textarea>
-
-      <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html">
-
-      <button type="submit" class="btn">Send</button>
-    </form>
-  </section>
+  <h2>Contact Us</h2>
+  <form action="https://getform.io/f/aejlloob" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html" />
+    <button type="submit">Send</button>
+  </form>
+</section>
 
   <footer>
     <p>&copy; 2025 Ziba Beach Resort. All rights reserved.</p>
