Replaced contact form with contact details

--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@
 
   <!-- Contact Us Section -->
   <section class="contact-section" id="contact">
-  <h2>Contact Us</h2>
-  <form action="https://getform.io/f/aejlloob" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" placeholder="Your Message" required></textarea>
-    <input type="hidden" name="_redirect" value="https://tobybankz.github.io/first-website/thankyou.html" />
-    <button type="submit">Send</button>
-  </form>
+  <div class="contact-details">
+    <h2>Contact Us</h2>
+    <p><strong>Email:</strong> Zibaresort@gmail.com</p>
+    <p><strong>Phone:</strong> +234 812 345 6789</p>
+    <p><strong>Address:</strong> Ziba Beach Resort, Victoria Island, Lagos, Nigeria</p>
+  </div>
 </section>
 
   <footer>
