--- a/gallery.html
+++ b/gallery.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gallery - My First Website</title>
+  <title>Gallery</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="lightbox/css/lightbox.min.css" />
+  <link href="lightbox2/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -19,47 +19,36 @@
     </nav>
   </header>
 
-  <section class="gallery-hero">
-  <div class="room-gallery">
-    <!-- Rooms -->
-    <div class="room-card">
-      <a href="images/room1a.jpeg" data-lightbox="rooms" data-title="Rooms - View A">
-        <img src="images/room1a.jpeg" alt="Rooms" />
-      </a>
-      <a href="images/room1b.jpeg" data-lightbox="rooms" data-title="Rooms - View B" style="display: none;"></a>
-      <a href="images/room1c.jpeg" data-lightbox="rooms" data-title="Rooms - View C" style="display: none;"></a>
-      <h3>Rooms</h3>
-      <p>Luxury suites with private balconies and lounges.</p>
+  <section class="gallery-section">
+    <h2>Rooms</h2>
+    <div class="gallery-row">
+      <a href="images/room.jpeg" data-lightbox="rooms" data-title="Room"><img src="images/room.jpeg" alt="Room"></a>
+      <a href="images/room1a.jpeg" data-lightbox="rooms" data-title="Room 1A"></a>
+      <a href="images/room1b.jpeg" data-lightbox="rooms" data-title="Room 1B"></a>
+      <a href="images/room1c.jpeg" data-lightbox="rooms" data-title="Room 1C"></a>
     </div>
 
-    <!-- View -->
-    <div class="room-card">
-      <a href="images/View1a.jpeg" data-lightbox="view" data-title="View - A">
-        <img src="images/View1a.jpeg" alt="View" />
-      </a>
-      <a href="images/View1b.jpeg" data-lightbox="view" data-title="View - B" style="display: none;"></a>
-      <a href="images/View1c.jpeg" data-lightbox="view" data-title="View - C" style="display: none;"></a>
-      <h3>View</h3>
-      <p>Come take a good look at our Ocean View.</p>
+    <h2>View</h2>
+    <div class="gallery-row">
+      <a href="images/View.jpeg" data-lightbox="views" data-title="View"><img src="images/view.jpeg" alt="View"></a>
+      <a href="images/View1a.jpeg" data-lightbox="views" data-title="View 1A"></a>
+      <a href="images/View1b.jpeg" data-lightbox="views" data-title="View 1B"></a>
+      <a href="images/View1c.jpeg" data-lightbox="views" data-title="View 1C"></a>
     </div>
 
-    <!-- Bar and Restaurant -->
-    <div class="room-card">
-      <a href="images/Bar1a.jpeg" data-lightbox="bar" data-title="Bar and Restaurant - A">
-        <img src="images/Bar1a.jpeg" alt="Bar and Restaurant" />
-      </a>
-      <a href="images/Bar1b.jpeg" data-lightbox="bar" data-title="Bar and Restaurant - B" style="display: none;"></a>
-      <a href="images/Bar1c.jpeg" data-lightbox="bar" data-title="Bar and Restaurant - C" style="display: none;"></a>
-      <h3>Bar and Restaurant</h3>
-      <p>Try our 5-star dining and oceanfront lounge.</p>
+    <h2>Bar</h2>
+    <div class="gallery-row">
+      <a href="images/Bar.jpeg" data-lightbox="bar" data-title="Bar"><img src="images/bar.jpeg" alt="Bar"></a>
+      <a href="images/Bar1a.jpeg" data-lightbox="bar" data-title="Bar 1A"></a>
+      <a href="images/Bar1b.jpeg" data-lightbox="bar" data-title="Bar 1B"></a>
+      <a href="images/Bar1c.jpeg" data-lightbox="bar" data-title="Bar 1C"></a>
     </div>
-  </div>
-</section>
+  </section>
 
   <footer>
     <p>&copy; 2025 My First Website. All rights reserved.</p>
   </footer>
 
-  <script src="lightbox/js/lightbox-plus-jquery.min.js"></script>
+  <script src="lightbox2/js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
